--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "babel-core": "^6.13.2",
     "http-server": "^0.9.0",
+    "underscore": "^1.8.3",
     "webpack": "^1.13.1"
   },
   "dependencies": {
